[tool.poetry]
name = "psty"
version = "0.1.0"
description = ""
authors = ["M4cs <mabridgland@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask_pymongo = "^2.3"
flask_restful = "^0.3.7"
Jinja2 = "^2.10"
pytz = "^2019.3"
Werkzeug = "^0.16.0"
apscheduler = "^3.6"
Flask = "^1.1"
flask_limiter = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
